feat(Tweets created): :sparkles:

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
 	},
 	"authors": [
 		{
-			"name": "Jorge Sant Ana",
-			"email": "jorge@teste.com.br"
+			"name": "Gabriel Santos",
+			"email": "gabriel.oliveira2040@hotmail.com"
 		}
 	],
 	"autoload": {
